--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,25 @@ ADD_SUBDIRECTORY(googletest)
 SET(CMAKE_CXX_STANDARD 11)
 
 ADD_EXECUTABLE(test
- #   unit_test.cpp
+    test.cpp
+    CMD.h
+    Token.h
+    Token.cpp
+    Or.h
+    Or.cpp
+    And.h
+    And.cpp
+    Semicolon.h
+    Semicolon.cpp
+    Connector.h
+    Exit.h
 )
+
+ADD_EXECUTABLE(rshell
+    main.cpp
+)
+
 
 TARGET_LINK_LIBRARIES(test gtest)
 TARGET_COMPILE_DEFINITIONS(test PRIVATE gtest_disable_pthreads=ON)
+
