--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ ADD_SUBDIRECTORY(googletest)
 SET(CMAKE_CXX_STANDARD 11)
 
 ADD_EXECUTABLE(test
+#    unit_tests/unit_test.cpp
     src/test.cpp
     src/Token.cpp
     src/Or.cpp
@@ -16,7 +17,7 @@ ADD_EXECUTABLE(test
 )
 
 ADD_EXECUTABLE(rshell
-    main.cpp
+    src/test.cpp
     src/Token.cpp
     src/Or.cpp
     src/And.cpp
