started unit  tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,16 @@ ADD_SUBDIRECTORY(googletest)
 SET(CMAKE_CXX_STANDARD 11)
 
 ADD_EXECUTABLE(test
-    unit_tests/unit_test.cpp
+    unit_tests/all_unit_tests.cpp
+    src/Token.cpp
+    src/Or.cpp
+    src/And.cpp
+    src/Semicolon.cpp
+    head/Exit.h
+    head/CMD.h
+    head/Connector.h
+    src/postfix.hpp
+    src/Test.cpp
 )
 
 ADD_EXECUTABLE(main
@@ -35,4 +44,3 @@ ADD_EXECUTABLE(rshell
 
 TARGET_LINK_LIBRARIES(test gtest)
 TARGET_COMPILE_DEFINITIONS(test PRIVATE gtest_disable_pthreads=ON)
-
